Put card type logo for current card

--- a/webpay-token/src/main/res/layout/dialog_card.xml
+++ b/webpay-token/src/main/res/layout/dialog_card.xml
@@ -38,6 +38,12 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/cardNumberField"/>
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:contentDescription="@string/card_number_type_icon_description"
+                android:id="@+id/cardNumberTypeIcon"/>
     </TableRow>
 
     <TableRow
