Add card.io example

--- a/sample/src/main/res/layout/activity_token_create.xml
+++ b/sample/src/main/res/layout/activity_token_create.xml
@@ -27,4 +27,13 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"/>
 
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/use_card_io"
+            android:id="@+id/start_card_io_button"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:onClick="onStartCardIo"/>
+
 </RelativeLayout>
