--- a/webpay-token/src/main/res/layout/dialog_card.xml
+++ b/webpay-token/src/main/res/layout/dialog_card.xml
@@ -1,103 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1">
 
-<TableLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stretchColumns="1">
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="20dp">
 
-    <TableRow
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#80000000"
+            android:layout_marginTop="18dp"
+            android:text="@string/card_we_accept" />
+
+        <LinearLayout
+            android:id="@+id/cardTypeIconList"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#80000000"
+            android:layout_marginTop="8dp"
+            android:text="@string/card_number" />
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <TextView
+            <jp.webpay.android.ui.field.NumberField
+                android:id="@+id/cardNumberField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:layout_marginTop="4dp"
+                android:textColor="#000000" />
+
+            <ImageView
+                android:id="@+id/cardNumberTypeIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/card_we_accept"
-                android:singleLine="false"/>
+                android:layout_alignRight="@id/cardNumberField"
+                android:contentDescription="@string/card_number_type_icon_description"/>
+        </RelativeLayout>
 
         <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:id="@+id/cardTypeIconList">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textColor="#80000000"
+                    android:layout_marginTop="18dp"
+                    android:text="@string/card_expiry" />
+
+                <jp.webpay.android.ui.field.ExpiryField
+                    android:id="@+id/cardExpiryField"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:layout_marginTop="4dp"
+                    android:textColor="#000000" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:layout_marginLeft="20dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textColor="#80000000"
+                    android:layout_marginTop="18dp"
+                    android:text="@string/card_cvc" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <jp.webpay.android.ui.field.CvcField
+                        android:id="@+id/cardCvcField"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:layout_marginTop="4dp"
+                        android:textColor="#000000"
+                        android:hint="123"/>
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignRight="@id/cardCvcField"
+                        android:id="@+id/cardCvcHelpButton"
+                        android:clickable="false"
+                        android:src="@android:drawable/ic_menu_help"
+                        android:background="@android:color/transparent"
+                        android:contentDescription="@string/card_cvc_help_description"/>
+
+                </RelativeLayout>
+            </LinearLayout>
         </LinearLayout>
 
-    </TableRow>
-
-    <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/card_number"/>
-
-        <jp.webpay.android.ui.field.NumberField
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/cardNumberField"/>
-
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:contentDescription="@string/card_number_type_icon_description"
-                android:id="@+id/cardNumberTypeIcon"/>
-    </TableRow>
-
-    <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/card_expiry"/>
-
-        <jp.webpay.android.ui.field.ExpiryField
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/cardExpiryField"/>
-    </TableRow>
-
-    <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/card_name"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="#80000000"
+            android:layout_marginTop="18dp"
+            android:text="@string/card_name" />
 
         <jp.webpay.android.ui.field.NameField
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/cardNameField"/>
-    </TableRow>
+            android:id="@+id/cardNameField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:layout_marginTop="4dp"
+            android:textColor="#000000" />
+    </LinearLayout>
+</ScrollView>
 
-    <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/card_cvc"/>
-
-        <jp.webpay.android.ui.field.CvcField
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/cardCvcField"/>
-
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/cardCvcHelpButton"
-                android:clickable="false"
-                android:src="@android:drawable/ic_menu_help"
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/card_cvc_help_description"/>
-    </TableRow>
-
-</TableLayout>
