--- a/webpay-token/src/main/res/layout/dialog_card.xml
+++ b/webpay-token/src/main/res/layout/dialog_card.xml
@@ -13,10 +13,7 @@
         android:paddingBottom="20dp">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="#80000000"
+            style="@style/card_label"
             android:layout_marginTop="18dp"
             android:text="@string/card_we_accept" />
 
@@ -28,10 +25,7 @@
         </LinearLayout>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="#80000000"
+            style="@style/card_label"
             android:layout_marginTop="8dp"
             android:text="@string/card_number" />
 
@@ -40,12 +34,11 @@
             android:layout_height="wrap_content">
 
             <jp.webpay.android.ui.field.NumberField
+                style="@style/card_edit_text"
                 android:id="@+id/cardNumberField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:layout_marginTop="4dp"
-                android:textColor="#000000" />
+                android:layout_marginTop="4dp" />
 
             <ImageView
                 android:id="@+id/cardNumberTypeIcon"
@@ -53,7 +46,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignRight="@id/cardNumberField"
                 android:layout_centerVertical="true"
-                android:contentDescription="@string/card_number_type_icon_description"/>
+                android:layout_marginRight="4dp"
+                android:contentDescription="@string/card_number_type_icon_description" />
         </RelativeLayout>
 
         <LinearLayout
@@ -67,20 +61,16 @@
                 android:orientation="vertical"
                 android:layout_weight="1">
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:textColor="#80000000"
+                    style="@style/card_label"
                     android:layout_marginTop="18dp"
                     android:text="@string/card_expiry" />
 
                 <jp.webpay.android.ui.field.ExpiryField
+                    style="@style/card_edit_text"
                     android:id="@+id/cardExpiryField"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:layout_marginTop="4dp"
-                    android:textColor="#000000" />
+                    android:layout_marginTop="4dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -90,10 +80,7 @@
                 android:layout_weight="1"
                 android:layout_marginLeft="20dp">
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:textColor="#80000000"
+                    style="@style/card_label"
                     android:layout_marginTop="18dp"
                     android:text="@string/card_cvc" />
 
@@ -102,12 +89,11 @@
                     android:layout_height="wrap_content">
 
                     <jp.webpay.android.ui.field.CvcField
+                        style="@style/card_edit_text"
                         android:id="@+id/cardCvcField"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="18sp"
                         android:layout_marginTop="4dp"
-                        android:textColor="#000000"
                         android:hint="123"/>
 
                     <ImageButton
@@ -119,27 +105,24 @@
                         android:src="@android:drawable/ic_menu_help"
                         android:background="@android:color/transparent"
                         android:layout_centerVertical="true"
-                        android:contentDescription="@string/card_cvc_help_description"/>
+                        android:layout_marginRight="4dp"
+                        android:contentDescription="@string/card_cvc_help_description" />
 
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="#80000000"
+            style="@style/card_label"
             android:layout_marginTop="18dp"
             android:text="@string/card_name" />
 
         <jp.webpay.android.ui.field.NameField
+            style="@style/card_edit_text"
             android:id="@+id/cardNameField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginTop="4dp"
-            android:textColor="#000000" />
+            android:layout_marginTop="4dp" />
     </LinearLayout>
 </ScrollView>
 
