--- a/webpay-token/src/main/res/values/styles.xml
+++ b/webpay-token/src/main/res/values/styles.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <style name="WebPayDialogTheme" parent="android:Theme.Dialog">
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <style name="WebPayDialogTheme">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">0dp</item>
-        <item name="android:windowBackground">@null</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowIsFloating">true</item>
         <item name="android:windowFullscreen">false</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+    </style>
+
+    <style name="card_edit_text">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:textColorHint">#e0e0e0</item>
+    </style>
+
+    <style name="card_label">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#80000000</item>
     </style>
 </resources>
