--- a/webpay-token/src/main/res/layout/dialog_card.xml
+++ b/webpay-token/src/main/res/layout/dialog_card.xml
@@ -93,8 +93,7 @@
                         android:id="@+id/cardCvcField"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
-                        android:hint="123"/>
+                        android:layout_marginTop="4dp" />
 
                     <ImageButton
                         android:layout_width="wrap_content"
