--- a/webpay-token/src/main/res/layout/dialog_card.xml
+++ b/webpay-token/src/main/res/layout/dialog_card.xml
@@ -130,6 +130,7 @@
             android:layout_below="@id/cardNameLabel"/>
 
         <LinearLayout
+            android:id="@+id/buttons"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="24dp"
@@ -154,5 +155,20 @@
                 android:textSize="14sp"
                 android:text="@string/card_send"/>
          </LinearLayout>
+        <LinearLayout
+            android:id="@+id/progress"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="24dp"
+            android:layout_below="@id/cardNameField"
+            android:orientation="horizontal"
+            android:padding="4dp"
+            android:gravity="center"
+            android:visibility="gone">
+            <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </RelativeLayout>
 </ScrollView>
