--- a/webpay-token/src/main/res/values/styles.xml
+++ b/webpay-token/src/main/res/values/styles.xml
@@ -12,15 +12,19 @@
     </style>
 
     <style name="card_edit_text">
+        <item name="android:layout_height">48dp</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">#333333</item>
         <item name="android:textColorHint">#e0e0e0</item>
+        <item name="android:layout_marginBottom">8dp</item>
     </style>
 
     <style name="card_label">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:layout_height">24dp</item>
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">12sp</item>
         <item name="android:textColor">#80000000</item>
     </style>
 </resources>
