--- a/webpay-token/src/main/res/layout/dialog_card.xml
+++ b/webpay-token/src/main/res/layout/dialog_card.xml
@@ -153,13 +153,12 @@
             android:layout_marginTop="24dp"
             android:layout_below="@id/cardNameField"
             android:orientation="horizontal"
-            android:padding="4dp"
             android:gravity="center"
             android:visibility="gone">
             <ProgressBar
                 style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="40dp"
+                android:layout_height="40dp"/>
         </LinearLayout>
     </RelativeLayout>
 </ScrollView>
