--- a/webpay-token/src/main/res/values/styles.xml
+++ b/webpay-token/src/main/res/values/styles.xml
@@ -17,6 +17,7 @@
         <item name="android:textColor">#333333</item>
         <item name="android:textColorHint">#e0e0e0</item>
         <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:singleLine">true</item>
     </style>
 
     <style name="card_label">
