--- a/webpay-token/src/main/res/layout/dialog_card.xml
+++ b/webpay-token/src/main/res/layout/dialog_card.xml
@@ -143,7 +143,7 @@
                 android:text="@string/card_cancel"/>
 
             <Button
-                android:id="@+id/button_sumbmit"
+                android:id="@+id/button_submit"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
