--- a/webpay-token/src/main/res/layout/dialog_cvc_help.xml
+++ b/webpay-token/src/main/res/layout/dialog_cvc_help.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/cvc_help"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_margin="30dp"/>
+        android:padding="30dp"
+        android:background="@android:color/white"
+        android:contentDescription="@string/card_cvc_help_description"/>
 </RelativeLayout>
