Separate card.io integration

--- a/sample/src/main/res/layout/activity_card_io_integration.xml
+++ b/sample/src/main/res/layout/activity_card_io_integration.xml
@@ -14,17 +14,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/statusTextView"/>
 
-    <!--
-        This FrameLayout is a placeholder for the WebPay token button and will be provided
-        by a fragment at runtime.
-    -->
-    <FrameLayout
-            android:id="@+id/webpay_token_button_fragment"
-            android:layout_gravity="center_horizontal"
+    <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/statusTextView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:text="@string/use_card_io"
+            android:id="@+id/start_card_io_button"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:onClick="onStartCardIo"/>
 
 </RelativeLayout>
