--- a/sample/src/main/res/menu/token_create.xml
+++ b/sample/src/main/res/menu/token_create.xml
@@ -1,10 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="jp.webpay.android.sample.TokenCreateActivity" >
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
     
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/action_info"
+        android:title="@string/action_info"
+        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
